# dotfiles

./: .gitattributes  dbkp.json  dbkp.toml
dbkp/: clang-format  flatpak  gnome-settings  starship.toml
dbkp/burn-my-windows/profiles/: 1693417159839460.conf
dbkp/extensions/CoverflowAltTab@palatis.blogspot.com/: metadata.json
dbkp/extensions/auto-move-windows@gnome-shell-extensions.gcampax.github.com/: metadata.json
dbkp/extensions/gnome-rectangle@acristoffers.me/: extension.js  prefs.js
dbkp/extensions/impatience@gfxmonk.net/: metadata.json
dbkp/extensions/inputmethod-shortcuts@osamu.debian.org/: README.md  extension.js  metadata.json
dbkp/extensions/notification-timeout@chlumskyvaclav.gmail.com/: metadata.json
dbkp/extensions/quick-settings-avatar@d-go/: metadata.json
dbkp/extensions/rectangle@acristoffers.me/: extension.js  metadata.json  prefs.js  tsconfig.tsbuildinfo
dbkp/extensions/run-or-raise@edvard.cz/: metadata.json
dbkp/extensions/smart-auto-move@khimaros.com/: metadata.json
dbkp/fish/: config.fish  fish_variables  fishd.tmp.au3kOX
dbkp/global-python/: flake.nix  pyproject.toml  requirements.txt
dbkp/hunspell/: personal
dbkp/nix/: nix.conf
dbkp/peaclock/: config
dbkp/qt5ct/: qt5ct.conf
dbkp/qt6ct/: qt6ct.conf
dbkp/run-or-raise/: shortcuts.conf
dbkp/tmux-tui/: catppuccin.yml  dracula.yml
dotfiles/: shortcuts.conf
dotfiles/fish/: config.fish  fish_variables
dotfiles/global-python/: flake.nix  pyproject.toml  requirements.txt
dotfiles/hunspell/: personal
system-setup/: fedora-silverblue.yml  fedora.yml
(+233 files in other folders)
