[project]
name = "global"
version = "1.0.0"
description = "Global PIP Staging."
authors = [{ name = "Álan Crístoffer", email = "acristoffers@startmail.com" }]
requires-python = ">=3.11"
dependencies = [
    "dictor>=0.1.12,<0.2",
    "hererocks>=0.25.1,<0.26",
    "pip>=25,<26",
    "pycode-similar~=1.4",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
